# nih-plug

./: Cargo.toml  build_midi2wl.sh  midi2wlambda.wl  midi2wlambda_init.wl  run_midi2wl.sh
plugins/midi_to_wlambda/: Cargo.toml
plugins/midi_to_wlambda/src/: lib.rs  main.rs
src/wrapper/vst3/: view.rs
